--- a/index.html
+++ b/index.html
@@ -1,76 +1,167 @@
 <!DOCTYPE html>
 <html lang="en" className="scroll-smooth">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BNC Motors | Pure Electric Intelligence</title>
+
+    <!-- Favicon and App Icons -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/png" href="/BNC_logo_big.png">
+    <link rel="apple-touch-icon" href="/BNC_logo_big.png">
+
+    <!-- Meta Tags -->
+    <meta name="description"
+        content="BNC Motors - Engineering the next era of mobility with pure electric vehicles. Challenger S110, Perfetto EV, and Etrol battery technology. Made in India.">
+    <meta name="keywords"
+        content="BNC Motors, electric vehicles, EV, Challenger S110, Perfetto, Etrol battery, electric bikes, electric scooters, India">
+    <meta name="author" content="BNC Motors">
+    <meta name="theme-color" content="#10b981">
+
+    <!-- Open Graph / Social Media -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="BNC Motors | Pure Electric Intelligence">
+    <meta property="og:description"
+        content="Engineering the next era of mobility with cutting-edge electric vehicles and Etrol battery technology.">
+    <meta property="og:image" content="/BNC_logo_big.png">
+    <meta property="og:url" content="https://www.bncmotors.in">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="BNC Motors | Pure Electric Intelligence">
+    <meta name="twitter:description"
+        content="Engineering the next era of mobility with cutting-edge electric vehicles.">
+    <meta name="twitter:image" content="/BNC_logo_big.png">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;700;800;900&family=Inter:wght@500;600;700;800&display=swap"
+        rel="stylesheet">
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
+
         body {
             font-family: 'Inter', sans-serif;
             background-color: #ffffff;
             color: #000000;
             overflow-x: hidden;
             -webkit-font-smoothing: antialiased;
+            font-weight: 600;
         }
+
         .font-heading {
             font-family: 'Orbitron', sans-serif;
         }
+
         ::-webkit-scrollbar {
             width: 4px;
         }
+
         ::-webkit-scrollbar-track {
             background: #f1f1f1;
         }
+
         ::-webkit-scrollbar-thumb {
             background: #10b981;
         }
+
         .glow-text-electric {
             text-shadow: 0 0 10px rgba(16, 185, 129, 0.2);
         }
+
         .glass-electric {
-            background: rgba(255, 255, 255, 0.8);
-            backdrop-filter: blur(12px);
+            background: rgba(255, 255, 255, 0.95);
             border: 1px solid rgba(0, 0, 0, 0.05);
         }
+
         .electric-grid {
-            background-image: linear-gradient(rgba(16, 185, 129, 0.08) 1px, transparent 1px), 
-                              linear-gradient(90deg, rgba(16, 185, 129, 0.08) 1px, transparent 1px);
+            background-image: linear-gradient(rgba(16, 185, 129, 0.08) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(16, 185, 129, 0.08) 1px, transparent 1px);
             background-size: 60px 60px;
         }
+
         @keyframes electric-pulse {
-            0%, 100% { opacity: 0.7; }
-            50% { opacity: 1; }
+
+            0%,
+            100% {
+                opacity: 0.7;
+            }
+
+            50% {
+                opacity: 1;
+            }
         }
+
         .animate-electric-pulse {
             animation: electric-pulse 4s infinite ease-in-out;
         }
+
         @keyframes floating {
-            0% { transform: translate(0, 0) rotate(0deg); }
-            33% { transform: translate(10px, -10px) rotate(1deg); }
-            66% { transform: translate(-5px, 15px) rotate(-1deg); }
-            100% { transform: translate(0, 0) rotate(0deg); }
+            0% {
+                transform: translate(0, 0) rotate(0deg);
+            }
+
+            33% {
+                transform: translate(10px, -10px) rotate(1deg);
+            }
+
+            66% {
+                transform: translate(-5px, 15px) rotate(-1deg);
+            }
+
+            100% {
+                transform: translate(0, 0) rotate(0deg);
+            }
         }
+
         .bg-floating-element {
             animation: floating 15s infinite ease-in-out;
         }
+
         .bg-grid-fade {
             mask-image: radial-gradient(circle at center, black, transparent 80%);
         }
+
         ::selection {
             background: #10b981;
             color: white;
         }
+
+        /* Performance Optimizations */
+        * {
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
+        }
+
+        /* GPU acceleration for animations */
+        .glass-electric,
+        nav,
+        [class*="motion-"] {
+            transform: translateZ(0);
+            will-change: transform;
+        }
+
+        /* Optimize scrolling */
+        html {
+            scroll-behavior: smooth;
+        }
+
+        @media (prefers-reduced-motion: reduce) {
+            * {
+                animation-duration: 0.01ms !important;
+                animation-iteration-count: 1 !important;
+                transition-duration: 0.01ms !important;
+            }
+        }
     </style>
-<script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react/": "https://esm.sh/react@^19.2.3/",
@@ -83,10 +174,12 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/index.css">
 </head>
+
 <body>
     <div id="root"></div>
-<script type="module" src="/index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
 </body>
+
 </html>
